@@ -117,3 +117,29 @@
 #ext_sqlite_regex ./sqlite3-pcre.dll
 # Default on other platforms:
 #ext_sqlite_regex /usr/lib/sqlite3/pcre.so
+
+# ======================================================================
+# Unsupported rsmb options
+# ======================================================================
+
+#autosave_on_changes
+#bind_address
+#clientid_prefixes
+#connection_messages
+#listener
+#max_connections
+#max_inflight_messages
+#max_queued_messages
+#retained_persistence
+#trace_level
+#addresses
+#cleansession
+#idle_timeout
+#keepalive_interval
+#notifications
+#notiication_topic
+#round_robin
+#start_type
+#threshold
+#try_private
+#mount_point
